--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,36 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.testng.Experiment_1</td>
+<td>com.testng.Temp</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ce3</td>
-<td>Hard Common </td>
-</tr>
+<td>m1</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ce2</td>
-<td>Medium Very Hard </td>
-</tr>
+<td>m2</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ce5</td>
-<td>Medium </td>
-</tr>
+<td>m3</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ce4</td>
-<td>Medium Common </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ce1</td>
-<td>Common </td>
-</tr>
+<td>m5</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
