--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">96</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">91</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.testng.Experiment_1</td><td><a href="#m0">ce1</a></td><td rowspan="1">1641960374917</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">ce2</a></td><td rowspan="1">1641960374930</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m2">ce3</a></td><td rowspan="1">1641960374937</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">ce4</a></td><td rowspan="1">1641960374942</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">ce5</a></td><td rowspan="1">1641960374950</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.testng.Temp</td><td><a href="#m0">m1</a></td><td rowspan="1">1643453711750</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">m2</a></td><td rowspan="1">1643453711768</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">m3</a></td><td rowspan="1">1643453711773</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">m5</a></td><td rowspan="1">1643453711776</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.testng.Experiment_1#ce1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.testng.Experiment_1#ce2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.testng.Experiment_1#ce3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.testng.Experiment_1#ce4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.testng.Experiment_1#ce5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.testng.Temp#m1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.testng.Temp#m2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.testng.Temp#m3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.testng.Temp#m5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
