--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Success User\AppData\Local\Temp\testng-eclipse--415617840\testng-customsuite.xml</span>
+                    <span>C:\Users\Success User\AppData\Local\Temp\testng-eclipse-1175259415\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>4 groups</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Experiment_1" class="method navigator-link" hash-for-method="ce1">ce1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Temp" class="method navigator-link" hash-for-method="m1">m1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Experiment_1" class="method navigator-link" hash-for-method="ce2">ce2</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Temp" class="method navigator-link" hash-for-method="m2">m2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Experiment_1" class="method navigator-link" hash-for-method="ce3">ce3</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Temp" class="method navigator-link" hash-for-method="m3">m3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Experiment_1" class="method navigator-link" hash-for-method="ce4">ce4</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Experiment_1" class="method navigator-link" hash-for-method="ce5">ce5</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.testng.Temp" class="method navigator-link" hash-for-method="m5">m5</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +137,35 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.testng.Experiment_1</span>
+              <span class="class-name">com.testng.Temp</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ce1">
-                  </a> <!-- ce1 -->
-                  <span class="method-name">ce1</span>
+                  <a name="m1">
+                  </a> <!-- m1 -->
+                  <span class="method-name">m1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ce2">
-                  </a> <!-- ce2 -->
-                  <span class="method-name">ce2</span>
+                  <a name="m2">
+                  </a> <!-- m2 -->
+                  <span class="method-name">m2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ce3">
-                  </a> <!-- ce3 -->
-                  <span class="method-name">ce3</span>
+                  <a name="m3">
+                  </a> <!-- m3 -->
+                  <span class="method-name">m3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ce4">
-                  </a> <!-- ce4 -->
-                  <span class="method-name">ce4</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ce5">
-                  </a> <!-- ce5 -->
-                  <span class="method-name">ce5</span>
+                  <a name="m5">
+                  </a> <!-- m5 -->
+                  <span class="method-name">m5</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Success User\AppData\Local\Temp\testng-eclipse--415617840\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Success User\AppData\Local\Temp\testng-eclipse-1175259415\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +182,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.testng.Experiment_1&quot;/&gt;
+      &lt;class name=&quot;com.testng.Temp&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -218,54 +206,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">Common</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce1</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce3</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce4</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Hard</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce3</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Medium</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce2</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce4</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce5</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Very Hard</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">ce2</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -282,32 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ce1')
-data.setCell(0, 2, 'com.testng.Experiment_1')
-data.setCell(0, 3, 9);
+data.setCell(0, 1, 'm1')
+data.setCell(0, 2, 'com.testng.Temp')
+data.setCell(0, 3, 11);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ce5')
-data.setCell(1, 2, 'com.testng.Experiment_1')
-data.setCell(1, 3, 5);
+data.setCell(1, 1, 'm2')
+data.setCell(1, 2, 'com.testng.Temp')
+data.setCell(1, 3, 2);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ce2')
-data.setCell(2, 2, 'com.testng.Experiment_1')
-data.setCell(2, 3, 3);
+data.setCell(2, 1, 'm5')
+data.setCell(2, 2, 'com.testng.Temp')
+data.setCell(2, 3, 1);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ce4')
-data.setCell(3, 2, 'com.testng.Experiment_1')
-data.setCell(3, 3, 3);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ce3')
-data.setCell(4, 2, 'com.testng.Experiment_1')
-data.setCell(4, 3, 2);
+data.setCell(3, 1, 'm3')
+data.setCell(3, 2, 'com.testng.Temp')
+data.setCell(3, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 ms</span>
+              <span class="suite-total-time">Total running time: 15 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -333,26 +269,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.testng.Experiment_1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.testng.Temp</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">ce1</span>
+                <span class="method-name">m1</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ce2</span>
-                <span class="method-start">13 ms</span>
+                <span class="method-name">m2</span>
+                <span class="method-start">18 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ce3</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-name">m3</span>
+                <span class="method-start">23 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ce4</span>
-                <span class="method-start">25 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ce5</span>
-                <span class="method-start">33 ms</span>
+                <span class="method-name">m5</span>
+                <span class="method-start">26 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
