--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c4b1">  <td>22/01/12 09:36:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Experiment_1.ce1()[pri:0, instance:com.testng.Experiment_1@7adda9cc]">ce1</td> 
-  <td>main@712609105</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>22/01/12 09:36:14</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Experiment_1.ce2()[pri:0, instance:com.testng.Experiment_1@7adda9cc]">ce2</td> 
-  <td>main@712609105</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>22/01/12 09:36:14</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Experiment_1.ce3()[pri:0, instance:com.testng.Experiment_1@7adda9cc]">ce3</td> 
-  <td>main@712609105</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>22/01/12 09:36:14</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Experiment_1.ce4()[pri:0, instance:com.testng.Experiment_1@7adda9cc]">ce4</td> 
-  <td>main@712609105</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>22/01/12 09:36:14</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Experiment_1.ce5()[pri:0, instance:com.testng.Experiment_1@7adda9cc]">ce5</td> 
-  <td>main@712609105</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>22/01/29 16:25:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Temp.m1()[pri:1, instance:com.testng.Temp@7adda9cc]">m1</td> 
+  <td>main@934275857</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>22/01/29 16:25:11</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Temp.m2()[pri:2, instance:com.testng.Temp@7adda9cc]">m2</td> 
+  <td>main@934275857</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>22/01/29 16:25:11</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Temp.m3()[pri:3, instance:com.testng.Temp@7adda9cc]">m3</td> 
+  <td>main@934275857</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>22/01/29 16:25:11</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Temp.m5()[pri:4, instance:com.testng.Temp@7adda9cc]">m5</td> 
+  <td>main@934275857</td>   <td></td> </tr>
 </table>
